--- a/BaeminWorkspace/Baemin/pom.xml
+++ b/BaeminWorkspace/Baemin/pom.xml
@@ -15,7 +15,7 @@
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 	<dependencies>
-		<!--  파일업로드하는 -->
+		<!-- 파일업로드하는 -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
@@ -26,10 +26,14 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-		
+
 		<!-- Spring -->
-		
-		
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework</groupId> -->
+<!-- 			<artifactId>spring-context-support</artifactId> -->
+<!-- 			<version>5.0.7</version> -->
+<!-- 		</dependency> -->
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -202,8 +206,8 @@
 			<artifactId>json</artifactId>
 			<version>20180130</version>
 		</dependency>
-		
-		
+
+
 
 
 
