--- a/BaeminWorkspace/Baemin/pom.xml
+++ b/BaeminWorkspace/Baemin/pom.xml
@@ -15,6 +15,29 @@
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 	<dependencies>
+	<!-- mail library -->
+	 <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.4.7</version>
+    </dependency>
+	
+	<!-- mail 서포트 -->
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context-support</artifactId>
+		<version>${org.springframework-version}</version>
+	
+	</dependency>
+	
+	
+	
+	 <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-mail</artifactId>
+        <version>3.0.5</version>
+    </dependency>
+	
 		<!-- 파일업로드하는 -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
